Support compile under Java 11 and 13
Update dependencies on POM file to allow compiling under Java 11 and 13.
Fix deprecation warnings